[workspace]
members = ["choadra_datatype", "choadra_dumper", "choadra_nbt"]

[package]
name = "choadra"
description = "Minecraft protocol handler implemented using binread"
keywords = ["minecraft"]
categories = ["network-programming", "simulation", "development-tools"]
version = "0.1.0+1.16.5"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/octylFractal/choadra"
edition = "2018"

[package.metadata.minecraft]
version = "1.16.5"

[dependencies]
thiserror = "1"
once_cell = "1"
binread = "2"
uuid = "0.8"
fixed = "1.7"
flate2 = "1"
serde_json = "1"
rand = "0.8"
x509-parser = "0.9"
aes = "0.6"
cfb8 = "0.6"
rsa = "0.4"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.choadra_datatype]
version = "0.1.0"
path = "./choadra_datatype"

[dependencies.choadra_nbt]
version = "0.1.0"
path = "./choadra_nbt"
