[package]
name = "choadra_datatype"
description = "Minecraft protocol data types"
keywords = ["minecraft"]
categories = ["network-programming"]
version = "0.1.0"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/octylFractal/choadra"
edition = "2018"

[dependencies]
thiserror = "1"
once_cell = "1"
binread = "2"
uuid = "0.8"
fixed = "1"
num-traits = "0.2"

[dependencies.choadra_nbt]
version = "0.1.0"
path = "../choadra_nbt"
