[package]
name = "choadra_dumper"
description = "Packet dumper using choadra"
keywords = ["minecraft"]
categories = ["network-programming", "simulation", "development-tools"]
version = "0.1.0+1.16.5"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/octylFractal/choadra"
edition = "2018"

[package.metadata.minecraft]
version = "1.16.5"

[dependencies]
anyhow = "1"
console = "0.14"
binread = "2"
structopt = "0.3"

[dependencies.choadra]
version = "0.1.0"
path = "../"

[dependencies.choadra_datatype]
version = "0.1.0"
path = "../choadra_datatype"

[[bin]]
name = "choadra-dumper"
path = "src/main.rs"
