[package]
name = "choadra_dumper"
description = "Packet dumper using choadra"
keywords = ["minecraft"]
categories = ["network-programming", "simulation", "development-tools"]
version = "0.1.0+1.16.5"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/octylFractal/choadra"
edition = "2018"

[package.metadata.minecraft]
version = "1.16.5"

[dependencies]
anyhow = "1"
console = "0.14"
rpassword = "5"
binread = "2"
structopt = "0.3"
directories-next = "2"
once_cell = "1"
serde_json = "1"

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.serde]
version = "1"
features = ["serde_derive"]

[dependencies.choadra]
version = "0.1.0"
path = "../"

[[bin]]
name = "choadra-dumper"
path = "src/main.rs"
