[package]
name = "choadra_nbt"
description = "NBT codec implemented via binread"
keywords = ["minecraft"]
categories = ["network-programming", "simulation", "development-tools"]
version = "0.1.0+1.16.5"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/octylFractal/choadra"
edition = "2018"

[package.metadata.minecraft]
version = "1.16.5"

[dependencies]
thiserror = "1"
once_cell = "1"
binread = "2"
flate2 = "1"
